<resources>
    <string name="app_name">유니아트</string>
    <string name="default_url">http://uni4989.cafe24.com/</string>

    <string name="default_notification_channel_id">Channel ID</string>
    <string name="msg_token_fmt" translatable="false">토큰 : %s</string>

    <!-- Preference Titles -->
    <string name="alarm_header">알림설정</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>


    <!-- Alarm Preferences -->
    <string name="notification_title">푸시 알림 설정</string>
    <string name="disturb_title">방해금지 시간설정</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>